# rust-and-flutter-demo

./: .gitignore  README.md
.github/: CODEOWNERS  dependabot.yaml
.github/workflows/: check.yaml
flutter_frontend/: .gitignore  Makefile  README.md  pubspec.yaml
flutter_frontend/.github/workflows/: check.yaml
flutter_frontend/android/app/: build.gradle
flutter_frontend/ios/Runner.xcodeproj/: project.pbxproj
flutter_frontend/lib/: main.dart
flutter_frontend/lib/core/: app_router.dart  environment.dart
flutter_frontend/lib/data/: client.dart  task_service.dart
flutter_frontend/lib/data/models/: create_task_dto.dart  task.dart
flutter_frontend/lib/domain/: create_task_use_case.dart  get_tasks_use_case.dart  set_task_done_use_case.dart
flutter_frontend/lib/pages/: task_details_page.dart  task_details_page_model.dart  task_overview_page.dart  task_overview_page_model.dart
flutter_frontend/lib/ui/: app_theme.dart  common.dart
flutter_frontend/test/data/: task_service_test.dart  tasks_service_test.fixtures.dart
flutter_frontend/test/pages/: task_overview_page_test.dart  test_details_page_test.dart  testable_widget_wrapper.dart
flutter_frontend/web/: index.html  manifest.json
rust-backend/: Cargo.toml  Makefile  README.md
rust-backend/.github/workflows/: check.yaml
rust-backend/db/: init.sql  setup_db.sh
rust-backend/dev/: requests.http
rust-backend/src/: main.rs
rust-backend/src/api/: error.rs  mod.rs  routes.rs
rust-backend/src/db/: database.rs  mod.rs
rust-backend/src/shared/: mod.rs
(+4 files in other folders)
