[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.22.0"
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
log = "0.4.20"
