[package]
name = "rust-backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
r2d2 = "0.8.10"
r2d2_sqlite = "0.24.0"
rusqlite = "0.31.0"
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
log = "0.4.22"
